Finish categories page

--- a/client/src/components/CategoryOverview.css
+++ b/client/src/components/CategoryOverview.css
@@ -1,38 +1,38 @@
-.TransactionOverview {
+.CategoryOverview {
   margin-bottom: 40px;
 }
 
-.TransactionOverview table {
+.CategoryOverview table {
   width: 100%;
   border-collapse: collapse;
   margin: 1rem 0;
   text-align: center;
 }
 
-.TransactionOverview thead {
+.CategoryOverview thead {
   background-color: #f2f2f2;
 }
 
-.TransactionOverview th {
+.CategoryOverview th {
   padding: 0.5rem;
   text-align: left;
   border-bottom: 2px solid #ddd;
   text-align: center;
 }
 
-.TransactionOverview tr {
+.CategoryOverview tr {
   border-bottom: 1px solid #ddd;
 }
 
-.TransactionOverview td {
+.CategoryOverview td {
   padding: 0.5rem;
 }
 
-.TransactionOverview tr:nth-child(even) {
+.CategoryOverview tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-.TransactionOverview td:nth-child(1) {
+.CategoryOverview td:nth-child(1) {
   font-weight: bold;
 }
 
