--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,8 @@
   padding: 2rem;
   text-align: center;
   font-family: Montserrat, sans-serif;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 input {
