--- a/client/src/components/Register.css
+++ b/client/src/components/Register.css
@@ -1,31 +1,17 @@
-* {
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-body {
+.Register body {
     display: flex;
     height: 100vh;
     justify-content: center;
     align-items: center;
     padding: 10px;
-    
 }
-.div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 350px;
+
+.Register h1 {
+    margin-top: -150px;
+    margin-bottom: 50px;
 }
-div label {
-    font-size: 15px;
-    margin: 15px;
-}
-div input {
-    font-size: 8px;
-    padding: 8px 8px;
+
+.Register input {
     width: 100%;
-   
+    margin-bottom: 15px;
 }
